Imagen en base64 y logg
- Imagen en base64
- Log de carga

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <h2>Agrega una imagen para reconocer su texto</h2>
 <div>
   <input type="file" (change)="onFileSelected($event)" accept="image/*" />
-  <p>Texto encontrado:</p>
+  <p>Progreso: {{  progressLabel + ' ' + progressNr + '%' }}</p> 
+  <p>Texto encontrado:</p> 
   <textarea rows="10" cols="50">{{ extractedText }}</textarea>
 </div>
+
+
